--- a/static/styles/base.css
+++ b/static/styles/base.css
@@ -1,9 +1,21 @@
 
+html{
+    overflow: hidden
+}
+
 html, body 
 { 
-height: 100%; 
-width: 100%; 
-margin: 0; 
+    width: 100%; 
+    height: 100%;
+}
+
+body{
+    background-color: #485263;
+}
+
+#container{
+    width:100%;
+    height:100%;
 }
 
 
@@ -11,7 +23,7 @@ margin: 0;
     background-color:rgb(39, 38, 38);
     width: 100%;
     height: 30vh;
-    position: absolute;
+    position: initial;
     border-bottom: 4px solid black;
     border-radius: 0 0 15px 15px;
 }
