--- a/templates/index.html
+++ b/templates/index.html
@@ -15,8 +15,9 @@
 	<div id="react_render">
 	</div>
 	{% render_bundle 'main' %}
-	<script type="text/javascript">
-		document.body.style.cursor = 'none';
 	</script>
 </body>
 </html>
+
+<!-- 	<script type="text/javascript">
+		document.body.style.cursor = 'none'; -->
